# Shelly

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CommandInput.tsx  GEMINI.md  LICENSE  PRESENTATION.md  README.md  SECURITY.md  app.config.ts  eas.json  jest.config.cjs  output-visibility.test.ts  package.json  pnpm-lock.yaml  project-io.test.ts  pseudo-shell.test.ts  server.js  snippet-io.test.ts  tailwind.config.js  termux-bridge.test.ts  theme.config.ts  types.ts
app/: _layout.tsx  (+5 more)
modules/terminal-emulator/android/: CMakeLists.txt  build.gradle
modules/terminal-emulator/android/src/main/: AndroidManifest.xml
modules/terminal-emulator/android/src/main/assets/: shelly-agent-driver.js  shelly-capability-broker.js  shelly-codex-auth.js  shelly-cs-tunnel.js  shelly-cs.js  shelly-doctor.js  shelly-gate-decide.js  shelly-gemini-auth.js  shelly-local-llm-ensure.sh  shelly-plan-executor.js  shelly-runtime-update.js  shelly-xdg-open.js
modules/terminal-emulator/android/src/main/assets/app-act-recipes/: line.send-message.json  x.post.json
modules/terminal-emulator/android/src/main/jni/: exec-wrapper-musl.c  exec-wrapper.c  shelly-exec.c  shelly-musl-exec.c  shelly-pty.c  shelly-shell-launcher.c  shelly-xdg-open.c  termux.c
modules/terminal-emulator/android/src/main/res/drawable/: scouter_ask_pill_bg.xml  scouter_badge_bg.xml  scouter_status_dot.xml  scouter_widget_bg.xml
modules/terminal-emulator/android/src/main/res/layout/: scouter_widget_medium.xml
modules/terminal-emulator/android/src/main/res/values-ja/: scouter_strings.xml
(+812 files in other folders)
